0.2.10 (UNRELEASED)
-------------------
- Make stat()ing of emulated /dev/ nodes appear as actual block/char device
  nodes with proper major/minor number, instead of regular files. (issue #16)
- Add umockdev_testbed_add_from_file() convenience wrapper around
  add_from_string(). (issue #15)

0.2.9 (2013-06-20)
------------------
- preload: Do not change errno when calculating wrapped paths.
- Add umockdev_testbed_disable() and umockdev_testbed_enable() methods for
  temporarily disabling the emulated /sys and /dev. This can be used for
  temporarily switching back to the real /sys and /dev without having to
  destroy or change $UMOCKDEV_DIR and the UMockdevTestbed instance (which is
  difficult when these get exported to subprocesses like local D-BUS
  instances).

0.2.8 (2013-06-17)
------------------
- Link the typelib to the SONAMEd library, not the version-less development
  symlink.

0.2.7 (2013-06-17)
------------------
- Slightly relax errno test in /umockdev-testbed-vala/usbfs_ioctl_static, the
  real call might fail not just with ENOTTY but also with EINVAL.
- Fix tests to work on big-endian machines (tested on powerpc32).

0.2.6 (2013-06-13)
------------------
- Do not use automake 1.13's parallel test runner. It not buy much for this
  project, and makes it a lot harder to analyse test failures from build logs.
- Add umockdev_testbed_clear() method to remove all added devices (both sysfs
  and /dev). This is useful for cleaning up between tests in situations where
  the UMockdevTestbed object itself needs to be kept.
- test-umockdev-run: Write X.org log into a file, point to it on X.org startup
  failure, and also point out that this needs X.org's dummy driver installed.
  (issue #12)
- Fix ioctl file reading on platforms which have unsigned "char" by default,
  such as ARM. (issue #11)
- Do not read sysfs attributes of any Tegra device (on ARM systems), as these
  often trigger kernel crashes (see https://launchpad.net/bugs/1190225).
  (issue #11)